<resources>
    <string name="app_name">CYC</string>
    <string name="title_activity_maps">Map</string>


    <string name="title_my_wallet">My Wallet</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_details">Details</string>
    <string name="title_my_trips">My Trips</string>
    <string name="title_my_report">Report</string>
    <string name="title_my_payments">My Payments</string>
    <string name="title_verify_otp">Verify OTP</string>
    <string name="title_cyc">CYC</string>

    <string name="un_lock">unlock</string>
    <string name="received_lock">received lock</string>
    <string name="info">connected ble device,can unlock</string>
    <string name="connect_tip">Must connected BLE device</string>
    <string name="scan">scan</string>
    <string name="scanning">scanning...</string>
    <string name="getseckey">Get Key</string>

    <string name="main_permissions_camera">Open the camera\'s access in Application management</string>
    <string name="main_permissions_location">Open the positiong\'s access in Application management</string>
    <string name="main_dialog_tip">Tip</string>
    <string name="main_dialog_submit">OK</string>


    <string name="error_message_unlock_server">Error from server and he status is null</string>

    <string name="ok">OK</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="grant">GRANT</string>
    <string name="cancel">CANCEL</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="menu_wallet">Wallet</string>
    <string name="menu_my_payments">My Payments</string>
    <string name="menu_my_trips">My Trips</string>
    <string name="menu_my_messages">My Messages</string>
    <string name="menu_invite_friends">Invite Friends</string>
    <string name="menu_user_guide">User Guide</string>
    <string name="menu_settings">Settings</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

</resources>
